# identicon-worker

./: Cargo.toml  README.md  wrangler.toml
.github/workflows/: main.yml
src/: lib.rs
