[package]
name = "identicon-server"
version = "0.1.0"
authors = ["Ardy Febriansyah <ardyfeb02@gmail.com>"]
edition = "2018"
repository = "https://github.com/ardyfeb/identicon-worker"
description = "Identicon generator worker"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
worker = "0.0.6"
serde_qs = "0.8"
console_error_panic_hook = "0.1.1"
identicon-rs = "2.0.2"
serde = {version = "1.0.130", features = ["derive"] }


[profile.release]
opt-level = "s"
